--- a/rtree/class.html
+++ b/rtree/class.html
@@ -73,7 +73,7 @@ If the first argument is neither of type basestring nor an instance
 of ICustomStorage, it is then assumed to be an input index item
 stream.</li>
 <li><strong>stream</strong> &#8211; <p>If the first argument in the constructor is not of type basestring,
-it is assumed to be an interable stream of data that will raise a
+it is assumed to be an iterable stream of data that will raise a
 StopIteration.  It must be in the form defined by the <tt class="xref py py-attr docutils literal"><span class="pre">interleaved</span></tt>
 attribute of the index.  The following example would assume
 <tt class="xref py py-attr docutils literal"><span class="pre">interleaved</span></tt> is False:</p>
@@ -577,7 +577,7 @@ methods) with objects=True given the parameters of the function.</p>
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
-      <input type="text" name="q" size="18" />
+      <input type="text" name="q" />
       <input type="submit" value="Go" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
@@ -608,7 +608,7 @@ methods) with objects=True given the parameters of the function.</p>
     </div>
     <div class="footer">
         &copy; Copyright 2011, Howard Butler, Brent Pedersen, Sean Gilles, and others..
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1pre.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.2pre/65e4c29a24e4.
     </div>
   </body>
 </html>
