--- a/rtree/performance.html
+++ b/rtree/performance.html
@@ -149,7 +149,7 @@ Otherwise, lots of data may potentially be copied.</p>
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
-      <input type="text" name="q" size="18" />
+      <input type="text" name="q" />
       <input type="submit" value="Go" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
@@ -180,7 +180,7 @@ Otherwise, lots of data may potentially be copied.</p>
     </div>
     <div class="footer">
         &copy; Copyright 2011, Howard Butler, Brent Pedersen, Sean Gilles, and others..
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1pre.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.2pre/65e4c29a24e4.
     </div>
   </body>
 </html>
