Add parallel_offset code and files.

--- a/shapely/genindex.html
+++ b/shapely/genindex.html
@@ -5,13 +5,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &mdash; Shapely v1.2.14 documentation</title>
+    <title>Index &mdash; Shapely v1.2.15 documentation</title>
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '#',
-        VERSION:     '1.2.14',
+        VERSION:     '1.2.15',
         COLLAPSE_MODINDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -19,7 +19,7 @@
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Shapely v1.2.14 documentation" href="index.html" /> 
+    <link rel="top" title="Shapely v1.2.15 documentation" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -28,7 +28,7 @@
         <li class="right" style="margin-right: 10px">
           <a href="#" title="General Index"
              accesskey="I">index</a></li>
-        <li><a href="index.html">Shapely v1.2.14 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely v1.2.15 documentation</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -159,9 +159,10 @@
 <table width="100%" class="indextable"><tr><td width="33%" valign="top">
 <dl>
 
+<dt><a href="manual.html#object.parallel_offset">parallel_offset() (object method)</a></dt>
 <dt><a href="manual.html#Point">Point (built-in class)</a></dt>
-<dt><a href="manual.html#Polygon">Polygon (built-in class)</a></dt>
-<dt><a href="manual.html#prepared.prep">prepared.prep() (built-in function)</a></dt></dl></td><td width="33%" valign="top"><dl>
+<dt><a href="manual.html#Polygon">Polygon (built-in class)</a></dt></dl></td><td width="33%" valign="top"><dl>
+<dt><a href="manual.html#prepared.prep">prepared.prep() (built-in function)</a></dt>
 <dt><a href="manual.html#object.project">project() (object method)</a></dt>
 </dl></td></tr></table>
 
@@ -227,7 +228,7 @@
         <li class="right" style="margin-right: 10px">
           <a href="#" title="General Index"
              >index</a></li>
-        <li><a href="index.html">Shapely v1.2.14 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely v1.2.15 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
