--- a/shapely/genindex.html
+++ b/shapely/genindex.html
@@ -5,13 +5,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &mdash; Shapely v1.2.15 documentation</title>
+    <title>Index &mdash; Shapely v1.2.16 documentation</title>
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '#',
-        VERSION:     '1.2.15',
+        VERSION:     '1.2.16',
         COLLAPSE_MODINDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -19,7 +19,7 @@
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Shapely v1.2.15 documentation" href="index.html" /> 
+    <link rel="top" title="Shapely v1.2.16 documentation" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -28,7 +28,7 @@
         <li class="right" style="margin-right: 10px">
           <a href="#" title="General Index"
              accesskey="I">index</a></li>
-        <li><a href="index.html">Shapely v1.2.15 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely v1.2.16 documentation</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -186,6 +186,7 @@
 <dt><a href="manual.html#shapely.ops.cascaded_union">shapely.ops.cascaded_union() (built-in function)</a></dt>
 <dt><a href="manual.html#shapely.ops.linemerge">shapely.ops.linemerge() (built-in function)</a></dt>
 <dt><a href="manual.html#shapely.ops.polygonize">shapely.ops.polygonize() (built-in function)</a></dt></dl></td><td width="33%" valign="top"><dl>
+<dt><a href="manual.html#shapely.ops.unary_union">shapely.ops.unary_union() (built-in function)</a></dt>
 <dt><a href="manual.html#shapely.wkb.dumps">shapely.wkb.dumps() (built-in function)</a></dt>
 <dt><a href="manual.html#shapely.wkb.loads">shapely.wkb.loads() (built-in function)</a></dt>
 <dt><a href="manual.html#shapely.wkt.dumps">shapely.wkt.dumps() (built-in function)</a></dt>
@@ -228,7 +229,7 @@
         <li class="right" style="margin-right: 10px">
           <a href="#" title="General Index"
              >index</a></li>
-        <li><a href="index.html">Shapely v1.2.15 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely v1.2.16 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
