--- a/shapely/index.html
+++ b/shapely/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Shapely Documentation Contents &mdash; Shapely 1.2.18 documentation</title>
+    <title>Shapely Documentation Contents &mdash; Shapely 1.2.19 documentation</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '1.2.18',
+        VERSION:     '1.2.19',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Shapely 1.2.18 documentation" href="#" />
+    <link rel="top" title="Shapely 1.2.19 documentation" href="#" />
     <link rel="next" title="Shapely" href="project.html" /> 
   </head>
   <body>
@@ -39,7 +39,7 @@
         <li class="right" >
           <a href="project.html" title="Shapely"
              accesskey="N">next</a> |</li>
-        <li><a href="#">Shapely 1.2.18 documentation</a> &raquo;</li> 
+        <li><a href="#">Shapely 1.2.19 documentation</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -142,12 +142,12 @@
         <li class="right" >
           <a href="project.html" title="Shapely"
              >next</a> |</li>
-        <li><a href="#">Shapely 1.2.18 documentation</a> &raquo;</li> 
+        <li><a href="#">Shapely 1.2.19 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2011-2013, Sean Gillies, Aron Bierbaum, Kai Lautaportti and others.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2b1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.
     </div>
   </body>
 </html>
