Last changes for 1.3.0.

--- a/shapely/manual.html
+++ b/shapely/manual.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>The Shapely User Manual &mdash; Shapely 1.3.0 documentation</title>
+    <title>The Shapely User Manual &mdash; Shapely 1.2 and 1.3 documentation</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Shapely 1.3.0 documentation" href="index.html" />
+    <link rel="top" title="Shapely 1.2 and 1.3 documentation" href="index.html" />
     <link rel="next" title="shapely" href="modules.html" />
     <link rel="prev" title="Shapely" href="project.html" /> 
   </head>
@@ -45,7 +45,7 @@
         <li class="right" >
           <a href="project.html" title="Shapely"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -2297,7 +2297,7 @@ Journal for Geographic Information and Geovisualization,  vol. 10, Dec.
         <li class="right" >
           <a href="project.html" title="Shapely"
              >previous</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
