--- a/shapely/design.html
+++ b/shapely/design.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Design Notes &mdash; Shapely 1.3.0 documentation</title>
+    <title>Design Notes &mdash; Shapely 1.2 and 1.3 documentation</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Shapely 1.3.0 documentation" href="index.html" /> 
+    <link rel="top" title="Shapely 1.2 and 1.3 documentation" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -37,7 +37,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -115,7 +115,7 @@ feature access - Part 1: Common architecture,” Oct. 2006.</td></tr>
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
