--- a/shapely/project.html
+++ b/shapely/project.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Shapely &mdash; Shapely 1.3.0 documentation</title>
+    <title>Shapely &mdash; Shapely 1.2 and 1.3 documentation</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -25,9 +25,9 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Shapely 1.3.0 documentation" href="index.html" />
+    <link rel="top" title="Shapely 1.2 and 1.3 documentation" href="index.html" />
     <link rel="next" title="The Shapely User Manual" href="manual.html" />
-    <link rel="prev" title="Shapely Documentation Contents" href="index.html" /> 
+    <link rel="prev" title="Shapely" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -43,9 +43,9 @@
           <a href="manual.html" title="The Shapely User Manual"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Shapely Documentation Contents"
+          <a href="index.html" title="Shapely"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -116,7 +116,7 @@
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="index.html"
-                        title="previous chapter">Shapely Documentation Contents</a></p>
+                        title="previous chapter">Shapely</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="manual.html"
                         title="next chapter">The Shapely User Manual</a></p>
@@ -708,9 +708,9 @@ outside shapely for efficient use in other code.</li>
           <a href="manual.html" title="The Shapely User Manual"
              >next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Shapely Documentation Contents"
+          <a href="index.html" title="Shapely"
              >previous</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
