--- a/shapely/py-modindex.html
+++ b/shapely/py-modindex.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Python Module Index &mdash; Shapely 1.3.0 documentation</title>
+    <title>Python Module Index &mdash; Shapely 1.2 and 1.3 documentation</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Shapely 1.3.0 documentation" href="index.html" />
+    <link rel="top" title="Shapely 1.2 and 1.3 documentation" href="index.html" />
  
 
 
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="#" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -475,7 +475,7 @@
         <li class="right" >
           <a href="#" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
