--- a/shapely/shapely.examples.html
+++ b/shapely/shapely.examples.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>examples Package &mdash; Shapely 1.3.0 documentation</title>
+    <title>examples Package &mdash; Shapely 1.2 and 1.3 documentation</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Shapely 1.3.0 documentation" href="index.html" />
+    <link rel="top" title="Shapely 1.2 and 1.3 documentation" href="index.html" />
     <link rel="up" title="shapely Package" href="shapely.html" />
     <link rel="next" title="geometry Package" href="shapely.geometry.html" />
     <link rel="prev" title="algorithms Package" href="shapely.algorithms.html" /> 
@@ -46,7 +46,7 @@
         <li class="right" >
           <a href="shapely.algorithms.html" title="algorithms Package"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li>
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li>
           <li><a href="modules.html" >shapely</a> &raquo;</li>
           <li><a href="shapely.html" accesskey="U">shapely Package</a> &raquo;</li> 
       </ul>
@@ -157,7 +157,7 @@
         <li class="right" >
           <a href="shapely.algorithms.html" title="algorithms Package"
              >previous</a> |</li>
-        <li><a href="index.html">Shapely 1.3.0 documentation</a> &raquo;</li>
+        <li><a href="index.html">Shapely 1.2 and 1.3 documentation</a> &raquo;</li>
           <li><a href="modules.html" >shapely</a> &raquo;</li>
           <li><a href="shapely.html" >shapely Package</a> &raquo;</li> 
       </ul>
