--- a/404.html
+++ b/404.html
@@ -1,5 +1,9 @@
----
-permalink: /404.html
----
-
-The Shapely user manual and other documentation has been moved to <a href="https://shapely.readthedocs.io/">https://shapely.readthedocs.io/</a> and the Fiona documentation has been moved to <a href="https://fiona.readthedocs.io/">https://fiona.readthedocs.io</a>.
+<html>
+<body>
+<h1>404 Not Found</h1>
+<p>The Shapely user manual and other documentation has been moved to <a
+    href="https://shapely.readthedocs.io/">https://shapely.readthedocs.io/</a>
+and the Fiona documentation has been moved to <a
+    href="https://fiona.readthedocs.io/">https://fiona.readthedocs.io</a>.</p>
+</body>
+</html>
